<resources>
    <string name="app_name">iMessage</string>
    <string name="title_message">消息</string>
    <string name="title_channel">频道</string>
    <string name="title_broadcast">广播</string>
    <string name="title_settings">设置</string>
    <string name="navigation_back">返回</string>
    <string name="navigation_close">关闭</string>
    <string name="title_login">登录</string>
    <string name="title_register">创建用户</string>
    <string name="title_reset_password">重设密码</string>
    <string name="server_setting">设置服务器</string>
    <string name="more">更多</string>
    <string name="server_type_central">中央服务器</string>
    <string name="server_type_custom">自定义服务器</string>
    <string name="server_setting_notice">如果你有自己可以连接的服务器，你可以自定义服务器的设置。应该为不同的服务器设置独立的数据存储文件夹。</string>
    <string name="login_way_imessage_id">iMessage ID 登录</string>
    <string name="login_way_email">邮箱登录</string>
    <string name="login_way_verify_code">验证码登录</string>
    <string name="title_settings_root">设置</string>
    <string name="title_settings_other_app">应用其他</string>
    <string name="title_settings_ui">UI</string>
    <string name="title_settings_edit_user">编辑用户</string>
    <string name="title_settings_edit_group_channel">编辑群频道</string>
    <string name="title_settings_edit_user_profile_visibility">用户资料可见性</string>
    <string name="title_settings_ways_to_find_me">查找我的方式</string>
    <string name="title_settings_version">版本</string>
    <string name="title_settings_permission">权限</string>
    <string name="title_change_imessage_id_user">更改 iMessage ID</string>
    <string name="title_change_username">更改用户名</string>
    <string name="title_change_group_channel_name">更改群频道名称</string>
    <string name="title_change_group_channel_id">更改群频道 ID</string>
    <string name="title_change_email">更改邮箱</string>
    <string name="title_change_sex">更改性别</string>
    <string name="title_change_region">更改地区</string>
    <string name="title_change_group_channel_region">更改群频道地区</string>
    <string name="title_change_avatar">更改头像</string>
    <string name="title_crop_image">裁剪图片</string>
    <string name="title_avatar">头像</string>
    <string name="title_channel_collection">收藏</string>
    <string name="title_all_group_members">所有成员</string>
    <string name="title_qr_code">二维码</string>
    <string name="title_save_qr_code">保存二维码</string>
    <string name="title_offline_detail">离线信息</string>
    <string name="title_open_source_licenses">开放源代码许可</string>
    <string name="title_explore_channel">搜台</string>
    <string name="title_explore_group_channel">搜台</string>
    <string name="title_invite_group_channel">邀请添加</string>
    <string name="title_edit_broadcast">编辑广播</string>
    <string name="title_send_broadcast">发送广播</string>
    <string name="title_request_add_channel">请求添加频道</string>
    <string name="title_request_join_group_channel">请求添加群频道</string>
    <string name="title_create_group_channel">创建</string>
    <string name="title_channel_setting">频道设置</string>
    <string name="title_group_channel_setting">群频道设置</string>
    <string name="title_group_channel_management">群频道管理</string>
    <string name="title_transfer_group_channel_admin">移交管理员</string>
    <string name="title_setting_note">设置备注</string>
    <string name="title_setting_group_note">设置群备注</string>
    <string name="title_setting_tag">设置标签</string>
    <string name="title_setting_group_tag">设置群标签</string>
    <string name="title_presetting_tag">设置标签</string>
    <string name="title_presetting_group_tag">设置群标签</string>
    <string name="title_settings_privacy">隐私</string>
    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>
    <string name="do_not_set">不设置</string>
    <string name="sex_nan">男</string>
    <string name="sex_nv">女</string>
    <string name="title_new_channel">新的频道</string>
    <string name="title_tag">标签</string>
    <string name="title_group_channel">群频道</string>
    <string name="title_notifications">通知</string>
    <string name="title_favorite">收藏</string>
    <string name="title_new_group_channel">新的群频道</string>
    <string name="title_group_tag">群标签</string>
    <string name="title_add_channel">添加频道</string>
    <string name="title_add_group_channel">添加群频道</string>
    <string name="title_chat_file">聊天文件</string>
    <string name="search_by_imessage_id_user">iMessage ID</string>
    <string name="search_by_email">邮箱</string>
    <string name="search_by_group_channel_id">群频道 ID</string>
    <string name="channel_addition_activity_pending">待处理</string>
    <string name="channel_addition_activity_send">发出</string>
    <string name="channel_addition_activity_receive">收到</string>
    <string name="group_channel_addition_activity_pending">待处理</string>
    <string name="group_channel_addition_activity_send">发出</string>
    <string name="group_channel_addition_activity_receive">收到</string>
    <string name="group_channel_addition_activity_invite">邀请</string>
    <string name="no_content">无内容</string>
    <string name="user_guide_info">请在所有限制后台运行的应用中，移除对本应用的限制。</string>
    <string name="title_broadcast_interactions">广播互动</string>
    <string name="broadcast_interactions_activity_like">喜欢</string>
    <string name="broadcast_interactions_activity_comment">评论</string>
    <string name="broadcast_interactions_activity_reply">回复</string>
    <string name="title_all_likes_of_broadcast">喜欢</string>
    <string name="title_broadcast_comment_reply">回复</string>
    <string name="title_broadcast_channel_permission">广播频道权限</string>
    <string name="title_exclude_broadcast_channel">不看 TA 的广播</string>
    <string name="title_broadcast_permission">广播权限</string>
    <string name="title_change">修改</string>
    <string name="title_forward_message">转发消息</string>
    <string name="forward_message_messages">消息</string>
    <string name="forward_message_channels">频道</string>
    <string name="title_forward">转发</string>
    <string name="title_search_channel">搜索频道</string>
    <string name="title_search_chat_message">搜索消息</string>
    <string name="title_search_group_channel">搜索群频道</string>
    <string name="title_version">版本</string>
    <string name="do_not_find_channel">没有找到频道</string>
    <string name="need_central_server">需要使用中央服务器</string>
    <string name="title_remove_group_channel">取消关联频道</string>
    <string name="title_group_channel_notifications">通知</string>

    <string name="fab_text_add_channel">添加频道</string>
    <string name="fab_text_start_chat">发送消息</string>
    <string name="fab_text_add_tag">添加标签</string>
    <string name="fab_text_tag">标签</string>
    <string name="fab_text_send_broadcast">发送广播</string>

    <string name="notification_title_server_message_service_foreground">iMessage 前台服务通知</string>
    <string name="notification_message_server_message_service_foreground">iMessage 使用前台服务与服务器通信\n这条通知应该被关闭</string>
    <string name="notification_title_server_message_service_not_running">服务长时间未运行</string>
    <string name="notification_message_server_message_service_not_running">检测到前台服务可能长时间不在运行中，请在当前设备的后台、自启动以及电池优化等限制中移除本应用。</string>

    <string name="preference_key_use_dynamic_color">use_dynamic_color</string>
    <string name="preference_key_night_mode">night_mode</string>
    <string name="preference_key_edit_user">edit_user</string>
    <string name="preference_key_logout">logout</string>
    <string name="preference_key_privacy">privacy</string>
    <string name="preference_key_email">email</string>
    <string name="preference_key_reset_password">reset_password</string>
    <string name="preference_key_share">share</string>
    <string name="preference_key_version">version</string>
    <string name="preference_key_other_app_settings">other_application_settings</string>
    <string name="preference_key_server_setting">server_setting</string>
    <string name="preference_key_app_settings">app_settings</string>
    <string name="preference_key_permission">permission</string>
    <string name="preference_key_restart">restart</string>
    <string name="preference_key_clear_all_badges">clear_all_badges</string>
    <string name="preference_key_ui">UI</string>
    <string name="preference_key_change_avatar">change_avatar</string>
    <string name="preference_key_change_group_id_user">group_id_user</string>
    <string name="preference_key_change_username">change_username</string>
    <string name="preference_key_change_group_name">change_group_name</string>
    <string name="preference_key_change_email">change_email</string>
    <string name="preference_key_change_sex">change_sex</string>
    <string name="preference_key_change_region">change_region</string>
    <string name="preference_key_version_name">version_name</string>
    <string name="preference_key_version_code">version_code</string>
    <string name="preference_key_build_time">build_time</string>
    <string name="preference_key_open_source_licenses">open_source_licenses</string>
    <string name="preference_key_user_guide">user_guide</string>
    <string name="preference_key_author">author</string>
    <string name="preference_key_battery_restriction">battery_restriction</string>
    <string name="preference_key_storage">storage</string>
    <string name="preference_key_read_media_images_and_videos">read_media_images_and_videos</string>
    <string name="preference_key_notification">notification</string>
    <string name="preference_key_manage_storage">manage_storage</string>
    <string name="preference_key_chat_bubble_color">chat_bubble_color</string>
    <string name="preference_key_bottom_navigation_view_label_visibility_mode">bottom_navigation_view_label_visibility_mode</string>
    <string name="preference_key_bottom_navigation_view_icon_style">bottom_navigation_view_icon_style</string>
    <string name="preference_key_change_email_visibility">change_email_visibility</string>
    <string name="preference_key_change_sex_visibility">change_sex_visibility</string>
    <string name="preference_key_change_region_visibility">change_region_visibility</string>
    <string name="preference_key_user_profile_visibility">user_profile_visibility</string>
    <string name="preference_key_ways_to_find_me">ways_to_find_me</string>
    <string name="preference_key_change_can_find_me_by_imessage_id">change_can_find_me_by_imessage_id</string>
    <string name="preference_key_change_can_find_me_by_email">change_can_find_me_by_email</string>
    <string name="preference_key_broadcast_channel_permission">broadcast_channel_permission</string>
    <string name="preference_key_do_not_see_broadcast_channel">do_not_see_broadcast_channel</string>
    <string name="preference_key_record_audio">record_audio</string>
    <string name="preference_key_bluetooth_connect">bluetooth_connect</string>
    <string name="preference_key_main_activity_fragment_switch_mode">main_activity_fragment_switch_mode</string>
    <string name="preference_key_font">font</string>
    <string name="preference_key_snackbar_appearance">snackbar_appearance</string>
    <string name="preference_key_user_category">user_category</string>
    <string name="preference_key_privacy_category">privacy_category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>