<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.longx.intelligent.android.imessage.preference.PermissionPreference
        app:key="@string/preference_key_battery_restriction"
        app:title="电池优化"
        app:summary="取消此应用的电池用量限制，应用的功能才能全部正常运行"/>

    <com.longx.intelligent.android.imessage.preference.PermissionPreference
        app:key="@string/preference_key_notification"
        app:title="通知"
        app:summary="接收通知消息"/>

    <com.longx.intelligent.android.imessage.preference.PermissionPreference
        app:key="@string/preference_key_storage"
        app:title="存储空间"
        app:summary="访问设备存储资源"/>

    <com.longx.intelligent.android.imessage.preference.PermissionPreference
        app:key="@string/preference_key_manage_storage"
        app:title="管理储存空间"
        app:summary="管理设备储存资源"/>

    <com.longx.intelligent.android.imessage.preference.PermissionPreference
        app:key="@string/preference_key_read_media_images_and_videos"
        app:title="照片和视频"
        app:summary="访问设备照片和视频媒体资源"/>

    <com.longx.intelligent.android.imessage.preference.PermissionPreference
        app:key="@string/preference_key_record_audio"
        app:title="录制音频"
        app:summary="录制语音消息和通话"/>

    <com.longx.intelligent.android.imessage.preference.PermissionPreference
        app:key="@string/preference_key_bluetooth_connect"
        app:title="蓝牙连接"
        app:summary="连接蓝牙设备进行配对和传输"/>
</PreferenceScreen>