<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/login"
        android:title="@string/title_login"
        android:icon="@drawable/login_24px"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="always"/>

    <item
        android:id="@+id/register"
        android:title="@string/title_register"
        android:icon="@drawable/person_add_fill_24px"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="always"/>

    <item
        android:id="@+id/reset_password"
        android:title="@string/title_reset_password"
        android:icon="@drawable/password_24px"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="always"/>

</menu>