<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_message">

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.longx.intelligent.android.ichat2.fragment.main.MessagesFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_channel"
        android:name="com.longx.intelligent.android.ichat2.fragment.main.ChannelsFragment"
        android:label="@string/title_channel"
        tools:layout="@layout/fragment_channels" />

    <fragment
        android:id="@+id/navigation_broadcast"
        android:name="com.longx.intelligent.android.ichat2.fragment.main.BroadcastsFragment"
        android:label="@string/title_broadcast"
        tools:layout="@layout/fragment_broadcasts" />
</navigation>